<resources>
    <string name="app_name">Lab3</string>
    <string name="hello">Всем привет, меня зовут Саня!</string>
    <string name="go_to_second_page">Переход на 2 страницу приложения</string>
    <string name="go_to_third_page">Переход на 3 страницу приложения</string>
    <string name="hello2">А вот и вторая Activity</string>
    <string name="go_back">Сохранить и вернуться на главную</string>
    <string name="question1">Введите ваше имя:)</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="editText1"> </string>
    <string name="_1">1</string>
    <string name="_eq">=</string>
    <string name="_2">2</string>
    <string name="_div">/</string>
    <string name="_0">0</string>
    <string name="_point">,</string>
    <string name="_4">4</string>
    <string name="_add">+</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_sub">&#8722;</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="_mul">*</string>
    <string name="_label">Calculator by Lyapanov Alexandr ;)</string>
</resources>